[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cost-calc"
version = "1.3.5"
description = "AI cost calculator and usage tracker. Calculate LLM API costs for 400+ models (OpenAI, Anthropic, Google). No API key required for cost lookups."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "ai-cost", "llm-cost", "llm-pricing", "token-cost",
    "openai-cost", "openai-pricing", "anthropic-pricing",
    "ai-usage", "cost-tracker", "cost-calculator",
    "model-pricing", "token-pricing", "ai-billing",
    "llm-usage", "api-cost",
]
dependencies = ["requests>=2.7,<3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
estimate = ["tiktoken>=0.7"]
dev = ["pytest", "mypy", "types-requests"]
